Optimize fonts and images.

--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,9 @@ font-style: normal;
     }
 
 ::selection {
-  background-color: #8e44ad;
-  color: white;
-  text-shadow: 1px 1px 0 #27ae60;
+    background-color: #ff6730;
+    color: #fff;
+    text-shadow: 1px 1px 0 #222;
 }
 
 .prof {
